horizontal scroll bug fix

--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,8 @@ html,
 .scrolling-wrapper {
   display: flex;
   flex-wrap: nowrap;
-  overflow-x: auto;
+  overflow-x:scroll ;
+  overflow-y:hidden;
 }
 
   .card {
